@@ -102,6 +102,8 @@ namespace LinuxSampler { namespace sf2 {
             virtual float GetFilterCutoff();
             virtual float GetPitch();
             virtual float GetResonance();
+            virtual float GetPan() { return 0; }
+            virtual uint8_t CaluclatePan(uint8_t pan) { return pan; }
     };
     
     class SF2SignalUnitRack : public SignalUnitRack {
